// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > default 1`] = `
<div
  aria-label="View details for BTC/USD"
  class="w-full text-left bg-gray-900 border rounded-xl p-5 hover:border-gray-700 hover:bg-gray-900/80 transition-all shadow-lg shadow-black/20 cursor-pointer  border-gray-800"
  role="button"
  tabindex="0"
>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-lg font-semibold text-gray-100"
      >
        BTC/USD
      </h3>
    </div>
    <div
      class="flex items-center gap-2"
    />
  </div>
  <div
    class="text-3xl font-bold text-gray-900 dark:text-white mb-3 font-mono tracking-tight"
  >
    $
    50,000.12
  </div>
  <div
    class="flex items-center justify-between text-xs text-gray-400 dark:text-gray-500 mb-3"
  >
    <span>
      Updated 
      27h ago
    </span>
    <span
      class="text-cyan-600 dark:text-cyan-400"
    >
      98.8
      % confidence
    </span>
  </div>
  <div
    class="flex flex-wrap gap-1.5"
  >
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-blue-500/20 text-blue-600 dark:text-blue-400 border-blue-500/30"
    >
      chainlink
    </span>
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-red-500/20 text-red-600 dark:text-red-400 border-red-500/30"
    >
      redstone
    </span>
  </div>
  <div
    class="mt-3 pt-3 border-t border-gray-800"
  >
    <button
      aria-label="Set alert for BTC/USD"
      class="flex items-center gap-1.5 text-xs font-medium transition-colors text-gray-500 hover:text-gray-300"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Set alert
    </button>
  </div>
</div>
`;

exports[`snapshots > hasAlert 1`] = `
<div
  aria-label="View details for BTC/USD"
  class="w-full text-left bg-gray-900 border rounded-xl p-5 hover:border-gray-700 hover:bg-gray-900/80 transition-all shadow-lg shadow-black/20 cursor-pointer  border-gray-800"
  role="button"
  tabindex="0"
>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-lg font-semibold text-gray-100"
      >
        BTC/USD
      </h3>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-label="Active alert"
        class="w-2 h-2 rounded-full bg-amber-400"
        role="status"
      />
    </div>
  </div>
  <div
    class="text-3xl font-bold text-gray-900 dark:text-white mb-3 font-mono tracking-tight"
  >
    $
    50,000.12
  </div>
  <div
    class="flex items-center justify-between text-xs text-gray-400 dark:text-gray-500 mb-3"
  >
    <span>
      Updated 
      27h ago
    </span>
    <span
      class="text-cyan-600 dark:text-cyan-400"
    >
      98.8
      % confidence
    </span>
  </div>
  <div
    class="flex flex-wrap gap-1.5"
  >
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-blue-500/20 text-blue-600 dark:text-blue-400 border-blue-500/30"
    >
      chainlink
    </span>
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-red-500/20 text-red-600 dark:text-red-400 border-red-500/30"
    >
      redstone
    </span>
  </div>
  <div
    class="mt-3 pt-3 border-t border-gray-800"
  >
    <button
      aria-label="Set alert for BTC/USD"
      class="flex items-center gap-1.5 text-xs font-medium transition-colors text-amber-400 hover:text-amber-300"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Alert set
    </button>
  </div>
</div>
`;

exports[`snapshots > isLive 1`] = `
<div
  aria-label="View details for BTC/USD"
  class="w-full text-left bg-gray-900 border rounded-xl p-5 hover:border-gray-700 hover:bg-gray-900/80 transition-all shadow-lg shadow-black/20 cursor-pointer  border-gray-800"
  role="button"
  tabindex="0"
>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-lg font-semibold text-gray-100"
      >
        BTC/USD
      </h3>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-label="Live data"
        class="w-2 h-2 rounded-full bg-green-500 animate-pulse"
        role="status"
      />
    </div>
  </div>
  <div
    class="text-3xl font-bold text-gray-900 dark:text-white mb-3 font-mono tracking-tight"
  >
    $
    50,000.12
  </div>
  <div
    class="flex items-center justify-between text-xs text-gray-400 dark:text-gray-500 mb-3"
  >
    <span>
      Updated 
      27h ago
    </span>
    <span
      class="text-cyan-600 dark:text-cyan-400"
    >
      98.8
      % confidence
    </span>
  </div>
  <div
    class="flex flex-wrap gap-1.5"
  >
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-blue-500/20 text-blue-600 dark:text-blue-400 border-blue-500/30"
    >
      chainlink
    </span>
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-red-500/20 text-red-600 dark:text-red-400 border-red-500/30"
    >
      redstone
    </span>
  </div>
  <div
    class="mt-3 pt-3 border-t border-gray-800"
  >
    <button
      aria-label="Set alert for BTC/USD"
      class="flex items-center gap-1.5 text-xs font-medium transition-colors text-gray-500 hover:text-gray-300"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Set alert
    </button>
  </div>
</div>
`;

exports[`snapshots > isStale 1`] = `
<div
  aria-label="View details for BTC/USD"
  class="w-full text-left bg-gray-900 border rounded-xl p-5 hover:border-gray-700 hover:bg-gray-900/80 transition-all shadow-lg shadow-black/20 cursor-pointer opacity-60 border-gray-800"
  role="button"
  tabindex="0"
>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-lg font-semibold text-gray-100"
      >
        BTC/USD
      </h3>
    </div>
    <div
      class="flex items-center gap-2"
    />
  </div>
  <div
    class="text-3xl font-bold text-gray-900 dark:text-white mb-3 font-mono tracking-tight"
  >
    $
    50,000.12
  </div>
  <div
    class="flex items-center justify-between text-xs text-gray-400 dark:text-gray-500 mb-3"
  >
    <span>
      Updated 
      27h ago
    </span>
    <span
      class="text-cyan-600 dark:text-cyan-400"
    >
      98.8
      % confidence
    </span>
  </div>
  <div
    class="flex flex-wrap gap-1.5"
  >
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-blue-500/20 text-blue-600 dark:text-blue-400 border-blue-500/30"
    >
      chainlink
    </span>
    <span
      class="px-2 py-0.5 rounded text-xs font-medium border bg-red-500/20 text-red-600 dark:text-red-400 border-red-500/30"
    >
      redstone
    </span>
  </div>
  <div
    class="mt-3 pt-3 border-t border-gray-800"
  >
    <button
      aria-label="Set alert for BTC/USD"
      class="flex items-center gap-1.5 text-xs font-medium transition-colors text-gray-500 hover:text-gray-300"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Set alert
    </button>
  </div>
</div>
`;
